--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -36,4 +36,6 @@ android {
 dependencies {
     compile project(':library')
     compile 'com.jakewharton:butterknife:7.0.0'
+    provided 'com.squareup.dagger:dagger-compiler:1.2.2'
+    compile 'com.squareup.dagger:dagger:1.2.2'
 }
