Added main activity for user to enter custom video url

--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         android:largeHeap="true">
 
         <activity
-            android:name="com.google.android.exoplayer.demo.SampleChooserActivity"
+            android:name="com.google.android.exoplayer.demo.MainActivity"
             android:configChanges="keyboardHidden"
             android:label="@string/application_name">
             <intent-filter>
